Bug fix css in the header's toggle with z-index

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -81,6 +81,7 @@
         right: 38px;
         top: 75px;
         box-shadow: 0 10px 20px rgb(0 0 0 / 19%), 0 6px 6px rgb(0 0 0 / 23%);
+        z-index: 50;
     }
     .containerAllSpanHeaderHide::before{
         position: absolute;
